--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -54,6 +54,7 @@
 \newcommand{\Z}{\mathbb{Z}}
 \renewcommand{\P}{\mathbb{P}}
 \newcommand{\ggT}{\text{ggT}}
+\newcommand{\Mod}[1]{\ \mathrm{mod}\ #1}
 
 \title{Diskrete Logarithmen}
 
