--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -31,7 +31,7 @@
 \floatname{algorithm}{Algorithmus}
 
 % Für Zeilenumbrüche ohne Indentations
-\setlength{\parindent}{0pt}
+% \setlength{\parindent}{0pt}
 
 % coole Kopf- und Fußzeilen:
 \usepackage{fancyhdr}
