--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -341,4 +341,24 @@ Abschließend erhalten wir die Kongruenz $x \Mod{q^k}$. Wenn wir dieses Verfahre
 für jeden Primfaktor von $p-1$ durchgeführt haben, nutzen wir den Chinesischen
 Restsatz um $x$ zu bestimmen.
 
+
+\subsection{Komplexität Naiver Algorithmus}
+\label{sub:komplexitaet_naiver_algorithmus}
+
+Zur Berechnung des diskreten Logarithmus $DL(y,g,p) = x$ als Lösung der Gleichung \\
+$g^x \equiv y \mod p$ ist kein effizientes Verfahren bekannt. Alle bekannten Verfahren beruhen im Grunde auf einer Brute-Force-Suche über die Menge der möglichen Lösungen $\Z_p^* = \{1, 2, ..., p-1\}$ mit der Komplexität $\mathcal O(p)$.
+Wenn man die Komplexität über die Bitlänge $n$ der Primzahl $p$ darstellt, mit $n = floor( \log_2 p ) + 1 \approx \log_2 p$, so ergibt sich exponentielle Komplexität $\mathcal O(2^n)$.
+
+Dazu ein Rechenbeispiel: Angenommen man sucht mit dem naiven Algorithmus die Lösung $x$ zur Eingabe $(y,g,p)$, d.h. man probiert alle möglichen Lösungen aus $\Z_p^*$ durch, bis man die Lösung gefunden hat. Zusätzlich stehen einem dazu die Rechenleistung von einer Anzahl von $10^{10}$ Prozessoren zur Verfügung, welche jeweils mit einer Frequenz von $10 \text{GHz} = 10^{10} \cdot s^{-1}$ operieren und jeweils mit jedem Berechnungsschritt eine modulare Potenz, also die Funktion $f(x, g, p) = g^x \mod p$, berechnen können. Dann hätte man eine Rechenleistung von $10^{20}$ modularen Potenzen pro Sekunde. Mit $10^{20} \leq 2^{67}$ ergibt sich die Zeit t zur Berechnung aller modularen Potenzen von allen möglichen Lösungen aus $\Z_p^*$ zu $t\geq \frac{2^n}{2^{67}\cdot s^{-1}}=2^{n-67}s$. Jetzt kann man leicht die Primzahl $p$ bzw. deren Bitlänge $n$ so groß setzen, dass die Zeit t größer wird als das Alter des Universums:
+\begin{align*}
+    t_{\text{Alter des Universums}} & = 14 \cdot 10^9y \\
+    & = 14 \cdot 10^9 \cdot 365 \cdot 24 \cdot 60\cdot 60\cdot s\\
+    & \leq 2^{59}\cdot s\\
+    t_{\text{Alter des Universums}} \leq 2^{59}\cdot s & \leq 2^{n-67}\cdot s \leq t \\
+    59 & \leq n-67\\
+    n & \geq 59+67\\
+    n & \geq 126
+\end{align*}
+Für eine Primzahl $p$ mit einer Bitlänge $n \geq 126$ dauert die Berechnung aller möglichen modularen Potenzen mit der oben genannten Hardware also länger als das Universum alt ist. Selbst wenn man annimmt, dass im Mittel die Lösung mit dem naiven Algorithmus nach der Hälfte der Rechenschritte gefunden wird, ist diese Zeitspanne unrealistisch. Außerdem kann, z.B. bei Verwendung des Diskreten-Logarithmus-Problems in der Verschlüsselungen, jede nicht-exponentielle Verbesserung des Algorithmus durch eine kostengünstige Vergrößerung der Bitlänge $n$ der Primzahl $p$ ausgeglichen werden. Sollte sich z.B. die gegebene Rechenleistung um den Faktor $x$ vergrößern, so müsste die Bitlänge $n$ der Primzahl $p$ lediglich um den Betrag $d = floor(\log_2 x)+1$ vergrößert werden: $n_{\text{neu}} = n_{\text{alt}} + d$. Würde die Rechenleistung sich also z.B. verzehnfachen, wäre also $x=10$, so würde eine konstante Vergrößerung der Bitlänge von $d=4$ dies wieder ausgleichen.
+
 \end{document}
