--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -58,6 +58,7 @@
 \newcommand{\Mod}[1]{\ \mathrm{mod}\ #1}
 
 \usepackage{tabularx} % tabellen hannes
+\def\doubleunderline#1{\underline{\underline{#1}}} % doppelt unterstrichen: \doubleunderline{abc}
 
 \title{Diskrete Logarithmen}
 
@@ -534,36 +535,38 @@ K_1 & \equiv B^a \mod p\\
 \begin{beispiel}[Diffie-Hellman-Merkle Schlüsselaustausch]\label{bsp:dhke}
 Die zwei Kommunikationspartner Alice und Bob tauschen einen gemeinsamen geheimen Schlüssel über einen unsicheren Kanal aus.
 \begin{center}
-    \begin{tabularx}{\textwidth}{Xcl}
-      \textbf{Alice} & & \textbf{Bob}\\\midrule
-      Schritt 1:\\
-      $\cdot$ wähle Primzahl: $p = 17$\\
-      $\cdot$ finde Erzeuger: $g = 5$\\
-      $\cdot$ wähle geheimen Schlüssel: $a = 10$\\
-      $\cdot$ berechne öffentlichen Schlüssel:\\
-      $A \equiv g^a \mod p$\\
-      $A = 5^{10} \mod 17$\\
-      $A = 9$\\
-      $\cdot$ sende: $(g = 5, p = 17, A = 9)$ an Bob & $\to$\text{                                        }
+    \begin{tabularx}{\textwidth}{lXr}
+    	\textbf{Alice} & \text{ } & \textbf{Bob}\\\midrule
     \end{tabularx}
-  \end{center}
-
-  \begin{center}
-    \begin{tabularx}{\textwidth}{lcX}
-      \textbf{Alice} &  & \multicolumn{1}{r}{\textbf{Bob}}\\\midrule
-     \text{       }& \text{       } & $\cdot$ wähle: geheimen Schlüssel: $b\in \{ 1 ,\ldots , p - 1 \}$\\
-      & & $\cdot$ berechne öffentlichen Schlüssel: $B \equiv g^b \mod p$\\
-      & & $\cdot$ berechne geheimen gemeinsamen Schlüssel: $K \equiv A^b \mod p$\\
-      & $\leftarrow$ & $\cdot$ sende: $B$ an Alice
+    \begin{tabularx}{\textwidth}{lXcXl}
+    	\textbf{Schritt 1:} & & & & \\
+    	$\cdot$ wähle Primzahl: $\underline{p = 17}$ & & & & \\
+    	$\cdot$ finde Erzeuger: $\underline{g = 5}$ & & & & \\
+    	$\cdot$ wähle geheimen Schlüssel: $a \in \Z_p^*$ & & & & \\
+    	$\underline{a = 10}$ & & & & \\
+    	$\cdot$ berechne öffentlichen Schlüssel: & & & & \\
+    	$A \equiv g^a \mod p$ & & & & \\
+    	$A = 5^{10} \mod 17$ & & & & \\
+    	$\underline{A = 9}$ & & & & \\
+    	$\cdot$ sende: $(g = 5, p = 17, A = 9)$ an Bob & & $\to$ & & \\\midrule
+    	& & & & \textbf{Schritt 2}:\\
+    	& & & & $\cdot$ wähle geheimen Schlüssel: $b \in \Z_p^*$\\
+		& & & & $\underline{b=7}$\\
+    	& & & & $\cdot$ berechne öffentlichen Schlüssel:\\
+    	& & & & $B \equiv g^b \mod p$\\
+    	& & & & $B = 5^7 \mod 17$\\
+    	& & & & $\underline{B = 10}$\\
+    	& & $\leftarrow$ & & $\cdot$ sende: $B$ an Alice\\\midrule
     \end{tabularx}
-  \end{center}
-
-  \begin{center}
-    \begin{tabularx}{\textwidth}{Xcl}
-      \textbf{Alice} &  & \textbf{Bob}\\\midrule
-      $\cdot$ berechne geheimen gemeinsamen Schlüssel: $K \equiv B^a \mod p$
+    \begin{tabularx}{\textwidth}{lXcXl}
+    	& & \textbf{Schritt 3}: && \\
+    	& & $\cdot$ berechne geheimen gemeinsamen Schlüssel $K$: & & \\
+    	$K_1 \equiv B^a \mod p$ & & & & $K_2 \equiv A^b \mod p$\\
+    	$K_1 = 10^{10} \mod 17$ & & & & $K_2 = 9^7 \mod 17$\\
+    	$\doubleunderline{K_1 = 2}$ & & & & $\doubleunderline{K_2 = 2}$\\
+    	& & $\doubleunderline{K_1 = K = K_2}$ & &
     \end{tabularx}
-  \end{center}
+\end{center}
 \end{beispiel}
 
 \end{document}
