--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -301,7 +301,7 @@ Wir suchen den Exponenten $x \in \Z_p^*$ für den gilt:
 Da $\Z_p^*$ nur endlich viele Element enthält, können wir für jedes $x$
 überprüfen, ob es die Kongruenz erfüllt.
 
-\begin{algorithm}
+\begin{algorithm}\label{alg:1}
   \caption{naiver Berechnungsalgorithmus}
   \begin{algorithmic}
     \REQUIRE{$p \in \P, \left\langle g \right\rangle \in \Z_p^*, y \in \Z_p^*$}
@@ -419,10 +419,10 @@ exponentielle Komplexität $\mathcal{O}(2^n)$. Dazu ein Rechenbeispiel:
 \begin{beispiel}
   Angenommen man sucht mit dem naiven Algorithmus die Lösung $x$ zur Eingabe
   $(y, g, p)$, d.\,h. man probiert alle möglichen Lösungen aus $\Z_p^*$ durch,
-  bis man die Lösung gefunden hat. Zusätzlich stehen einem dazu die
-  Rechenleistung von einer Anzahl von $10^{10}$ Prozessoren zur Verfügung,
-  welche jeweils mit einer Frequenz von $10 \text{\,GHz}$ ($= 10^{10} \cdot s^{-1}$)
-  operieren und jeweils mit jedem Berechnungsschritt eine modulare Potenz, also
+  bis man die Lösung gefunden hat (siehe Abschnitt \ref{alg:1}). Zusätzlich steht einem dazu die
+  Rechenleistung von einer Anzahl von 10 Milliarden $(=10^{10})$ Prozessoren zur Verfügung,
+  welche jeweils mit einer Taktfrequenz von $10 \text{\,GHz}$ ($= 10^{10} \cdot s^{-1}$)
+  operieren und jeweils mit jedem Taktzyklus eine modulare Potenz, also
   die Funktion $f(x, g, p) = g^x \mod p$, berechnen können. Dann hätte man eine
   Rechenleistung von $10^{20}$ modularen Potenzen pro Sekunde. Mit
   $10^{20} \leq 2^{67}$ ergibt sich die Zeit $t$ zur Berechnung aller modularen
@@ -461,9 +461,9 @@ exponentielle Komplexität $\mathcal{O}(2^n)$. Dazu ein Rechenbeispiel:
 Der auf der Schwierigkeit des Diskreten-Logarithmus-Problems beruhende Diffie-Hellman-Merkle Schlüsselaustausch, englisch: \textbf{D}iffie-\textbf{H}ellman-\textbf{K}ey-\textbf{E}xchange (\textbf{DHKE}), hat den folgenden Ablauf:
 Zwei Kommunikationspartner, hier Alice und Bob, kommunizieren über einen unsicheren Kanal und wollen einen Schlüssel für eine sichere Kommunikation, z.B. durch eine symmetrische Verschlüsselung, austauschen.
 
-Im ersten Schritt wählt Alice eine ausreichend große und den \todo{bekannte Schwachstellen rausnehmen?}bekannten Schwachstellen des Verfahrens ausweichende Primzahl $p$, mit $p = 2 \cdot q + 1$, $q$ prim. Ausreichend groß bedeutet hierbei, dass die Bitlänge $n$ der Primzahl $p$ so groß ist, dass die Berechnung des diskreten Logarithmus $\text{DL}(y,g,p)$ mit bekannten Algorithmen und aktueller Hardware auf absehbare Zeit nicht möglich sein wird (siehe Abschnitt  \ref{sub:komplexitaet_naiver_algorithmus}). Weiterhin sucht Alice einen \todo{ist die Formulierung bei Erzeuger korrekt?}Erzeuger $g \in \Z_p^*$, $\Z_p^* = \{1, 2, \ldots, p-1\}$, welcher $g^k \mod p$, $k \in \N \backslash \{0\}$, zyklisch ohne Untergruppen auf $\Z_p^*$ abbildet (siehe Abschnitt  \ref{def:erzeuger}). Dann wählt Alice ihren geheimen privaten Schlüssel $a \in \Z_p^*$,  berechnet ihren öffentlichen Schlüssel $A$ mit $A \equiv g^a \mod p$ und sendet ($g$, $p$, $A$) über den unsicheren Kanal an Bob.
+Im ersten Schritt wählt Alice eine ausreichend große Primzahl $p$, welche den \todo{bekannte Schwachstellen rausnehmen?}bekannten Fallstricken des Verfahrens ausweicht, z.B. mit $p = c \cdot q+1$, $c \in \N\backslash\{0\}$, $q$ prim, $q$ möglichst groß (etwa $p = 2 \cdot q + 1$). Ausreichend groß bedeutet hierbei, dass die Bitlänge $n$ der Primzahl $p$ so groß ist, dass die Berechnung des diskreten Logarithmus $\text{DL}(y,g,p)$ mit bekannten Algorithmen und aktueller Hardware auf absehbare Zeit nicht möglich sein wird (siehe Abschnitt \ref{sub:komplexitaet_naiver_algorithmus}). Zur Zeit (Jahr 2017) kann für $p$ eine Bitlänge von $n_p = 2048$ und für $q$ eine Bitlänge von $n_q = 256$ als sicher angenommen werden. Weiterhin sucht Alice einen \todo{ist die Formulierung bei Erzeuger korrekt?}Erzeuger $g \in \Z_p^*$, $(2 \leq g \leq p-2)$, welcher $g^k \mod p$, $k \in \N \backslash \{0\}$, zyklisch ohne Untergruppen auf $\Z_p^*$ abbildet (siehe Abschnitt \ref{def:erzeuger}). Dann wählt Alice ihren geheimen privaten Schlüssel $a \in \Z_p^*$, $(1 \leq a \leq p-2)$,  berechnet ihren öffentlichen Schlüssel $A$ mit $A \equiv g^a \mod p$ und sendet ($g$, $p$, $A$) über den unsicheren Kanal an Bob.
 
-Im zweiten Schritt wählt Bob seinen geheimen privaten Schlüssel $b \in \Z_p^*$, berechnet seinen öffentlichen Schlüssel $B$ mit $B \equiv g^b \mod p$ und sendet $B$ über den unsicheren Kanal an Alice.
+Im zweiten Schritt wählt Bob seinen geheimen privaten Schlüssel $b \in \Z_p^*$, $(1 \leq b \leq p-2)$, berechnet seinen öffentlichen Schlüssel $B$ mit $B \equiv g^b \mod p$ und sendet $B$ über den unsicheren Kanal an Alice.
 Der gemeinsame geheime Schlüssel $K$ ergibt sich nun auf der Seite von Alice mit
 \begin{align*}
 	K \equiv B^a \mod p
@@ -535,39 +535,44 @@ K_1 & \equiv B^a \mod p\\
 \label{sub:dhke_beispiel}
 \begin{beispiel}[Diffie-Hellman-Merkle Schlüsselaustausch]\label{bsp:dhke}
 Die zwei Kommunikationspartner Alice und Bob tauschen einen gemeinsamen geheimen Schlüssel $K$ über einen unsicheren Kanal aus.
-\begin{center}
-    \begin{tabularx}{\textwidth}{lXr}
-    	\textbf{Alice} & \text{ } & \textbf{Bob}\\\midrule
-    \end{tabularx}
-    \begin{tabularx}{\textwidth}{lXcXl}
-    	\textbf{Schritt 1:} & & & & \\
-    	$\cdot$ wähle Primzahl: $\underline{p = 17}$ & & & & \\
-    	$\cdot$ finde Erzeuger: $\underline{g = 5}$ & & & & \\
-    	$\cdot$ wähle geheimen Schlüssel: $a \in \Z_p^*$ & & & & \\
-    	$\underline{a = 10}$ & & & & \\
-    	$\cdot$ berechne öffentlichen Schlüssel: & & & & \\
-    	$A \equiv g^a \mod p$ & & & & \\
-    	$A = 5^{10} \mod 17$ & & & & \\
-    	$\underline{A = 9}$ & & & & \\
-    	$\cdot$ sende: $(g = 5, p = 17, A = 9)$ an Bob & & $\to$ & & \\\midrule
-    	& & & & \textbf{Schritt 2}:\\
-    	& & & & $\cdot$ wähle geheimen Schlüssel: $b \in \Z_p^*$\\
-		& & & & $\underline{b=7}$\\
-    	& & & & $\cdot$ berechne öffentlichen Schlüssel:\\
-    	& & & & $B \equiv g^b \mod p$\\
-    	& & & & $B = 5^7 \mod 17$\\
-    	& & & & $\underline{B = 10}$\\
-    	& & $\leftarrow$ & & $\cdot$ sende: $B$ an Alice\\\midrule
-    \end{tabularx}
-    \begin{tabularx}{\textwidth}{lXcXl}
-    	& & \textbf{Schritt 3}: & & \\
-    	& & $\cdot$ berechne geheimen Schlüssel $K$: & & \\
-    	$K_1 \equiv B^a \mod p$ & & & & $K_2 \equiv A^b \mod p$\\
-    	$K_1 = 10^{10} \mod 17$ & & & & $K_2 = 9^7 \mod 17$\\
-    	$\doubleunderline{K_1 = 2}$ & & & & $\doubleunderline{K_2 = 2}$\\
-    	& & $\doubleunderline{K_1 = K = K_2}$ & &
-    \end{tabularx}
-\end{center}
+	\begin{center}
+	    \begin{tabularx}{\textwidth}{lXr}
+	    	\textbf{Alice} & \text{ } & \textbf{Bob}\\\midrule
+	    \end{tabularx}
+	    \begin{tabularx}{\textwidth}{lXcXl}
+	    	\textbf{Schritt 1:} & & & & \\
+	    	$\cdot$ wähle Primzahl: $\underline{p = 17}$ & & & & \\
+	    	$\cdot$ finde Erzeuger: $\underline{g = 5}$ & & & & \\
+	    	$\cdot$ wähle geheimen Schlüssel: $a \in \Z_p^*$ & & & & \\
+	    	$\underline{a = 10}$ & & & & \\
+	    	$\cdot$ berechne öffentlichen Schlüssel: & & & & \\
+	    	$A \equiv g^a \mod p$ & & & & \\
+	    	$A = 5^{10} \mod 17$ & & & & \\
+	    	$\underline{A = 9}$ & & & & \\
+	    	$\cdot$ sende: $(g = 5, p = 17, A = 9)$ an Bob & & $\to$ & & \\\midrule
+	    	& & & & \textbf{Schritt 2}:\\
+	    	& & & & $\cdot$ wähle geheimen Schlüssel: $b \in \Z_p^*$\\
+			& & & & $\underline{b=7}$\\
+	    	& & & & $\cdot$ berechne öffentlichen Schlüssel:\\
+	    	& & & & $B \equiv g^b \mod p$\\
+	    	& & & & $B = 5^7 \mod 17$\\
+	    	& & & & $\underline{B = 10}$\\
+	    	& & $\leftarrow$ & & $\cdot$ sende: $B$ an Alice\\\midrule
+	    \end{tabularx}
+	    \begin{tabularx}{\textwidth}{lXcXl}
+	    	& & \textbf{Schritt 3}: & & \\
+	    	& & $\cdot$ berechne geheimen Schlüssel $K$: & & \\
+	    	$K_1 \equiv B^a \mod p$ & & & & $K_2 \equiv A^b \mod p$\\
+	    	$K_1 = 10^{10} \mod 17$ & & & & $K_2 = 9^7 \mod 17$\\
+	    	$\doubleunderline{K_1 = 2}$ & & & & $\doubleunderline{K_2 = 2}$\\
+	    	& & $\doubleunderline{K_1 = K = K_2}$ & &
+	    \end{tabularx}
+	\end{center}
 \end{beispiel}
+
+\subsection{Verschlüsselung mit DHKE}
+\label{sub:enc_with_dhke}
+Ein Kommunikationspartner (Bob) schickt eine geheime Nachricht $m$ an einen anderen Kommunikationspartner (Alice) über einen unsicheren Kanal.
+
 
 \end{document}
