added todo with source

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -461,7 +461,7 @@ exponentielle Komplexität $\mathcal{O}(2^n)$. Dazu ein Rechenbeispiel:
 Der auf der Schwierigkeit des Diskreten-Logarithmus-Problems beruhende Diffie-Hellman-Merkle Schlüsselaustausch, englisch: \textbf{D}iffie-\textbf{H}ellman-\textbf{K}ey-\textbf{E}xchange (\textbf{DHKE}), hat den folgenden Ablauf:
 Zwei Kommunikationspartner, hier Alice und Bob, kommunizieren über einen unsicheren Kanal und wollen einen Schlüssel für eine sichere Kommunikation, z.B. durch eine symmetrische Verschlüsselung, austauschen.
 
-Im ersten Schritt wählt Alice eine ausreichend große Primzahl $p$, welche den \todo{bekannte Schwachstellen rausnehmen?}bekannten Fallstricken des Verfahrens ausweicht, z.B. mit $p = c \cdot q+1$, $c \in \N\backslash\{0\}$, $q$ prim, $q$ möglichst groß (etwa $p = 2 \cdot q + 1$). Ausreichend groß bedeutet hierbei, dass die Bitlänge $n$ der Primzahl $p$ so groß ist, dass die Berechnung des diskreten Logarithmus $\text{DL}(y,g,p)$ mit bekannten Algorithmen und aktueller Hardware auf absehbare Zeit nicht möglich sein wird (siehe Abschnitt \ref{sub:komplexitaet_naiver_algorithmus}). Zur Zeit (Jahr 2017) kann für $p$ eine Bitlänge von $n_p = 2048$ und für $q$ eine Bitlänge von $n_q = 256$ als sicher angenommen werden. Weiterhin sucht Alice einen \todo{ist die Formulierung bei Erzeuger korrekt?}Erzeuger $g \in \Z_p^*$, $(2 \leq g \leq p-2)$, welcher $g^k \mod p$, $k \in \N \backslash \{0\}$, zyklisch ohne Untergruppen auf $\Z_p^*$ abbildet (siehe Abschnitt \ref{def:erzeuger}). Dann wählt Alice ihren geheimen privaten Schlüssel $a \in \Z_p^*$, $(1 \leq a \leq p-2)$,  berechnet ihren öffentlichen Schlüssel $A$ mit $A \equiv g^a \mod p$ und sendet ($g$, $p$, $A$) über den unsicheren Kanal an Bob.
+Im ersten Schritt wählt Alice eine ausreichend große Primzahl $p$, welche den \todo{bekannte Schwachstellen rausnehmen?}bekannten Fallstricken des Verfahrens ausweicht, z.B. mit $p = c \cdot q+1$, $c \in \N\backslash\{0\}$, $q$ prim, $q$ möglichst groß (etwa $p = 2 \cdot q + 1$). Ausreichend groß bedeutet hierbei, dass die Bitlänge $n$ der Primzahl $p$ so groß ist, dass die Berechnung des diskreten Logarithmus $\text{DL}(y,g,p)$ mit bekannten Algorithmen und aktueller Hardware auf absehbare Zeit nicht möglich sein wird (siehe Abschnitt \ref{sub:komplexitaet_naiver_algorithmus}). Zur Zeit (Jahr 2017) kann für $p$ eine Bitlänge von $n_p = 2048$ und für $q$ eine Bitlänge von $n_q = 256$ als sicher \todo{source: https://security.stackexchange.com/questions/112313/what-is-the-current-security-status-of-diffie-hellman-key-exchange}angenommen werden. Weiterhin sucht Alice einen \todo{ist die Formulierung bei Erzeuger korrekt?}Erzeuger $g \in \Z_p^*$, $(2 \leq g \leq p-2)$, welcher $g^k \mod p$, $k \in \N \backslash \{0\}$, zyklisch ohne Untergruppen auf $\Z_p^*$ abbildet (siehe Abschnitt \ref{def:erzeuger}). Dann wählt Alice ihren geheimen privaten Schlüssel $a \in \Z_p^*$, $(1 \leq a \leq p-2)$,  berechnet ihren öffentlichen Schlüssel $A$ mit $A \equiv g^a \mod p$ und sendet ($g$, $p$, $A$) über den unsicheren Kanal an Bob.
 
 Im zweiten Schritt wählt Bob seinen geheimen privaten Schlüssel $b \in \Z_p^*$, $(1 \leq b \leq p-2)$, berechnet seinen öffentlichen Schlüssel $B$ mit $B \equiv g^b \mod p$ und sendet $B$ über den unsicheren Kanal an Alice.
 Der gemeinsame geheime Schlüssel $K$ ergibt sich nun auf der Seite von Alice mit
