--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -281,8 +281,163 @@ $\varphi(\varphi(p))$ Primitivwurzeln.
   Finde ein $x$ mit $1 \leq x \leq p-1$, so dass $g^x \equiv y \mod p$ gilt.
 \end{definition}
 
+Zum Schluss noch ein Satz zur Kongruenzrechnung, der später beim
+Diffie-Hellman-Schlüsselaustausch (Abschnitt~\ref{sub:dhke_proof}) benötigt
+wird:
+\begin{satz}\label{satz:potenzen_bei_kongruenzen}
+  Seien $a \in \Z$ und $k, u, n \in \N \setminus \{ 0 \}$, dann gilt
+  ${(a^k \Mod{n})}^u \equiv a^{k\cdot u} \mod n$.
+  \begin{proof}
+    \todo{quelle einfügen [Menezes, S.68 2.112(V)]}
+    Seien $a, a_1, b, b_1 \in \Z$ und $n \in \N \setminus \{0\}$ und gelte $a
+    \equiv a_1 \Mod{n}$ und $b \equiv b_1 \Mod{n}$.
+    \begin{align*}
+      a \cdot b & \equiv a_1 \cdot b_1 \mod n
+    \end{align*}
+    Angenommen $a=b$, also
+    \begin{align*}
+      a \cdot a & \equiv a_1 \cdot a_1 \mod n
+    \end{align*}
+    dann folgt
+    \begin{align*}
+      a^k & \equiv a_1^k \mod n \quad \text{ mit } k \in \N \setminus \{ 0 \}
+    \end{align*}
+    und daraus
+    \begin{align*}
+      {(a^k)}^u & \equiv {(a_1^k)}^u \mod n \quad \text{ mit } u \in \N \setminus \{ 0 \}
+    \end{align*}
+    womit sich ergibt, dass
+    \begin{align*}
+      {(a_1^k \Mod{n})}^u & \equiv {(a_1^k)}^u \mod n
+    \end{align*}
+    und
+    \begin{align*}
+      {(a_1^k \Mod{n})}^u & \equiv a_1^{k\cdot u} \mod n
+    \end{align*}
+  \end{proof}
+\end{satz}
+
 \section{Anwendung: Ver- und Entschlüsselung}
 \label{sec:anwendung_ver_und_entschlusselung}
+
+\subsection{Diffie-Hellman-Merkle Schlüsselaustausch (DHKE)}
+\label{sub:diffie_hellman_key_exchange}
+
+Der auf der Schwierigkeit des Diskreten-Logarithmus-Problems beruhende
+Diffie-Hellman-Merkle Schlüsselaustausch, englisch:
+\textbf{D}iffie-\textbf{H}ellman-\textbf{K}ey-\textbf{E}xchange (\textbf{DHKE}),
+hat den folgenden Ablauf:
+Zwei Kommunikationspartner, hier Alice und Bob, kommunizieren über einen
+unsicheren Kanal und wollen einen Schlüssel für eine sichere Kommunikation,
+z.\,B. durch eine symmetrische Verschlüsselung, austauschen.
+
+Im ersten Schritt wählt Alice eine ausreichend große Primzahl $p$, welche den
+bekannten Fallstricken des Verfahrens ausweicht, z.\,B. mit $p = c \cdot q+1$,
+$c \in \N \setminus \{ 0 \}$, $q$ prim, $q$ möglichst groß (etwa
+$p = 2 \cdot q + 1$).
+Ausreichend groß bedeutet hierbei, dass die Bitlänge $n$ der Primzahl $p$
+so groß ist, dass die Berechnung des diskreten Logarithmus $\text{DL}(y,g,p)$
+mit bekannten Algorithmen und aktueller Hardware auf absehbare Zeit nicht
+möglich sein wird (siehe Abschnitt~\ref{sub:komplexitaet_naiver_algorithmus}).
+Zur Zeit kann für $p$ eine Bitlänge von $n_p = 2048$ und für $q$ eine Bitlänge
+von $n_q = 256$ als sicher angenommen werden.
+Weiterhin bestimmt Alice eine Primitivwurzel $g \in \Z_p^*$ (siehe
+Abschnitt~\ref{def:erzeuger}).
+Dann wählt Alice ihren geheimen privaten Schlüssel
+$a \in \Z_p^*$, $(1 \leq a \leq p-2)$, berechnet ihren öffentlichen Schlüssel
+$A$ mit $A \equiv g^a \mod p$ und sendet $(g, p, A)$ über den unsicheren Kanal
+an Bob.
+
+Im zweiten Schritt wählt Bob seinen geheimen privaten Schlüssel $b \in \Z_p^*$,
+$(1 \leq b \leq p-2)$, berechnet seinen öffentlichen Schlüssel $B$ mit
+$B \equiv g^b \mod p$ und sendet $B$ über den unsicheren Kanal an Alice.
+Der gemeinsame geheime Schlüssel $K$ ergibt sich nun auf der Seite von Alice mit
+\begin{align*}
+	K \equiv B^a \mod p
+\end{align*}
+und auf der Seite von Bob mit
+\begin{align*}
+	K \equiv A^b \mod p \text{.}
+\end{align*}
+
+\begin{figure}[H]\label{fig:dhke}
+  \centering
+  \includegraphics[width=\textwidth]{Diffie-Hellman-Schluesselaustausch2.png}
+  \caption{Diffie-Hellman-Merkle-Schlüsselaustausch}
+\end{figure}
+
+\subsubsection{Korrektheit: Diffie-Hellman-Merkle Schlüsselaustausch (DHKE)}
+\label{sub:dhke_proof}
+Zur Korrektheit des Diffie-Hellman-Merkle Schlüsselaustausches: Beide
+Kommunikationspartner haben den gleichen Schlüssel $K = K_1 = K_2$:
+
+Mit der Kongruenz aus Satz~\ref{satz:potenzen_bei_kongruenzen} lässt sich nun
+einfach zeigen, dass die Schlüssel $K_1$ von Alice und $K_2$ von Bob kongruent
+sind:
+\begin{align*}
+  K_1 & \equiv B^a \mod p\\
+  & \equiv {(g^b)}^a \mod p\\
+  & \equiv g^{b \cdot a} \mod p\\
+  & \equiv g^{a \cdot b} \mod p\\
+  & \equiv {(g^a)}^b \mod p\\
+  & \equiv A^b \mod p\\
+  & \equiv K_2
+\end{align*}
+
+\subsubsection{Beispiel: Diffie-Hellman-Merkle Schlüsselaustausch (DHKE)}
+\label{sub:dhke_beispiel}
+\begin{beispiel}[Diffie-Hellman-Merkle Schlüsselaustausch]\label{bsp:dhke}
+  Die zwei Kommunikationspartner Alice und Bob tauschen einen gemeinsamen
+  geheimen Schlüssel $K$ über einen unsicheren Kanal aus (zu Anschauungszwecken
+  mit kleinen Primzahlen).
+  \begin{center}
+    \begin{tabularx}{\textwidth}{lXr}
+      \textbf{Alice} & & \textbf{Bob}\\
+      \midrule
+    \end{tabularx}
+    \begin{tabularx}{\textwidth}{lXcXl}
+      \textbf{Schritt 1:} & & & & \\
+      $\cdot$ wähle Primzahl: $\underline{p = 17}$ & & & & \\
+      $\cdot$ finde Erzeuger: $\underline{g = 5}$ & & & & \\
+      $\cdot$ wähle geheimen Schlüssel: & & & & \\
+      $a \in \{1, \dots, p-2\}$ & & & & \\
+      $\underline{a = 10}$ & & & & \\
+      $\cdot$ berechne öffentlichen Schlüssel: & & & & \\
+      $A \equiv g^a \mod p$ & & & & \\
+      $A = 5^{10} \mod 17$ & & & & \\
+      $\underline{A = 9}$ & & & & \\
+      $\cdot$ sende: $(g = 5, p = 17, A = 9)$ an Bob & & $\to$ & & \\\midrule
+      & & & & \textbf{Schritt 2}:\\
+      & & & & $\cdot$ wähle geheimen Schlüssel:\\
+      & & & & $b \in \{1, \dots, p-2\}$\\
+      & & & & $\underline{b=7}$\\
+      & & & & $\cdot$ berechne öffentlichen Schlüssel:\\
+      & & & & $B \equiv g^b \mod p$\\
+      & & & & $B = 5^7 \mod 17$\\
+      & & & & $\underline{B = 10}$\\
+      & & $\leftarrow$ & & $\cdot$ sende: $B$ an Alice\\\midrule
+    \end{tabularx}
+    \begin{tabularx}{\textwidth}{lXcXl}
+      & & \textbf{Schritt 3}: & & \\
+      & & $\cdot$ berechne geheimen Schlüssel $K$: & & \\
+      $K_1 \equiv B^a \mod p$ & & & & $K_2 \equiv A^b \mod p$\\
+      $K_1 = 10^{10} \mod 17$ & & & & $K_2 = 9^7 \mod 17$\\
+      $\doubleunderline{K_1 = 2}$ & & & & $\doubleunderline{K_2 = 2}$\\
+      & & $\doubleunderline{K_1 = K = K_2}$ & &
+    \end{tabularx}
+  \end{center}
+  Der geheime Schlüssel $K$, den nur Alice und Bob kennen, ist für einen
+  Mithörer der öffentlichen Kommunikation nur schwierig zu Ermitteln, da dieser
+  den diskreten Logarithmus $\text{DL}(A,g,p) = a$ als Lösung der Gleichung
+  $A \equiv g^a \mod p$ bzw. $\text{DL}(B,g,p) = b$ als Lösung der Gleichung
+  $B \equiv g^b \mod p$ berechnen muss, um $K_1 \equiv B^a \mod p$ oder
+  $K_2 \equiv A^b \mod p$, $K = K_1 = K_2$, ermitteln zu können.
+\end{beispiel}
+
+\subsection{Verschlüsselung mit DHKE}
+\label{sub:enc_with_dhke}
+Ein Kommunikationspartner (Bob) schickt eine geheime Nachricht $m$ an einen
+anderen Kommunikationspartner (Alice) über einen unsicheren Kanal.
 
 \section{Berechnung von diskreten Logarithmen}
 \label{sec:berechnung_von_diskreten_logarithmen}
@@ -301,7 +456,7 @@ Wir suchen den Exponenten $x \in \Z_p^*$ für den gilt:
 Da $\Z_p^*$ nur endlich viele Element enthält, können wir für jedes $x$
 überprüfen, ob es die Kongruenz erfüllt.
 
-\begin{algorithm}\label{alg:1}
+\begin{algorithm}\label{alg:dlog_naive}
   \caption{naiver Berechnungsalgorithmus}
   \begin{algorithmic}
     \REQUIRE{$p \in \P, \left\langle g \right\rangle \in \Z_p^*, y \in \Z_p^*$}
@@ -324,6 +479,63 @@ Da $\Z_p^*$ nur endlich viele Element enthält, können wir für jedes $x$
 %                return x
 %  \end{minted}
 %\end{listing}
+
+\subsubsection{Komplexität des naiven Algorithmus’}
+\label{ssub:komplexitaet_naiver_algorithmus}
+
+Zur Berechnung des diskreten Logarithmus $\text{DL}(y,g,p) = x$ als Lösung der
+Gleichung
+\begin{align*}
+  y \equiv g^x \mod p
+\end{align*}
+ist kein effizientes Verfahren bekannt.
+Alle bekannten Verfahren beruhen im Grunde auf einer Brute-Force-Suche über der
+Menge der möglichen Lösungen $\Z_p^* = \{1, 2, \ldots, p-1\}$ mit der
+Komplexität $\mathcal{O}(p)$.
+Wenn man die Komplexität über die Bitlänge $n$ der Primzahl $p$ darstellt, mit
+$n = \left\lfloor \log_2 p \right\rfloor + 1 \approx \log_2 p$, so ergibt sich
+exponentielle Komplexität $\mathcal{O}(2^n)$. Dazu ein Rechenbeispiel:
+
+\begin{beispiel}
+  Angenommen man sucht mit dem naiven Algorithmus die Lösung $x$ zur Eingabe
+  $(y, g, p)$, d.\,h. man probiert alle möglichen Lösungen aus $\Z_p^*$ durch,
+  bis man die Lösung gefunden hat (siehe Abschnitt~\ref{alg:dlog_naive}).
+  Zusätzlich steht einem dazu die Rechenleistung von einer Anzahl von 10
+  Milliarden $(=10^{10})$ Prozessoren zur Verfügung, welche jeweils mit einer
+  Taktfrequenz von $10 \text{\,GHz}$ ($= 10^{10} \cdot s^{-1}$) operieren und
+  jeweils mit jedem Taktzyklus eine modulare Potenz, also die Funktion $f(x, g,
+  p) = g^x \mod p$, berechnen können.
+  Dann hätte man eine Rechenleistung von $10^{20}$ modularen Potenzen pro
+  Sekunde.
+  Mit $10^{20} \leq 2^{67}$ ergibt sich die Zeit $t$ zur Berechnung aller
+  modularen Potenzen von allen möglichen Lösungen aus $\Z_p^*$ zu
+  $t \geq \frac{2^n}{2^{67}\cdot s^{-1}}=2^{n-67} s$.
+  Jetzt kann man leicht die Primzahl $p$ bzw. deren Bitlänge $n$ so groß setzen,
+  dass die Zeit $t$ größer wird als das Alter des Universums:
+  \begin{align*}
+    t_{\text{Alter des Universums}} & = 14 \cdot 10^9 y\\
+    & = 14 \cdot 10^9 \cdot 365 \cdot 24 \cdot 60\cdot 60\cdot s\\
+    & \leq 2^{59}\cdot s\\
+    t_{\text{Alter des Universums}} \leq 2^{59}\cdot s & \leq 2^{n-67}\cdot s \leq t\\
+    59 & \leq n-67\\
+    n & \geq 59+67\\
+    n & \geq 126
+  \end{align*}
+  Für eine Primzahl $p$ mit einer Bitlänge $n \geq 126$ dauert die Berechnung
+  aller möglichen modularen Potenzen mit der oben genannten Hardware also länger
+  als das Universum alt ist. Selbst wenn man annimmt, dass im Mittel die Lösung
+  mit dem naiven Algorithmus nach der Hälfte der Rechenschritte gefunden wird,
+  ist diese Zeitspanne unrealistisch. Außerdem kann, z.\,B. bei Verwendung des
+  Diskreten-Logarithmus-Problems in der Verschlüsselung, jede
+  nicht-exponentielle Verbesserung des Algorithmus durch eine kostengünstige
+  Vergrößerung der Bitlänge $n$ der Primzahl $p$ ausgeglichen werden. Sollte
+  sich z.\,B. die gegebene Rechenleistung um den Faktor $x$ vergrößern, so
+  müsste die Bitlänge $n$ der Primzahl $p$ lediglich um den Betrag
+  $d = \left\lfloor \log_2 x \right\rfloor + 1$ vergrößert werden:
+  $n_{\text{neu}} = n_{\text{alt}} + d$. Würde die Rechenleistung sich also
+  z.\,B. verzehnfachen, wäre also $x=10$, so würde eine konstante Vergrößerung
+  der Bitlänge von $d=4$ dies wieder ausgleichen.
+\end{beispiel}
 
 \subsection{Pohlig-Hellman-Algorithmus}
 \label{sub:pohlig_hellman_algorithmus}
@@ -403,179 +615,6 @@ Abschließend erhalten wir die Kongruenz $x \Mod{q^k}$. Wenn wir dieses Verfahre
 für jeden Primfaktor von $p-1$ durchgeführt haben, nutzen wir den Chinesischen
 Restsatz um $x$ zu bestimmen.
 
-
-\subsection{Komplexität Naiver Algorithmus}
-\label{sub:komplexitaet_naiver_algorithmus}
-
-Zur Berechnung des diskreten Logarithmus $\text{DL}(y,g,p) = x$ als Lösung der Gleichung\\
-$y \equiv g^x \mod p$ ist kein effizientes Verfahren bekannt. Alle bekannten
-Verfahren beruhen im Grunde auf einer Brute-Force-Suche über die Menge der
-möglichen Lösungen $\Z_p^* = \{1, 2, \ldots, p-1\}$ mit der Komplexität
-$\mathcal{O}(p)$.
-Wenn man die Komplexität über die Bitlänge $n$ der Primzahl $p$ darstellt, mit
-$n = \left\lfloor \log_2 p \right\rfloor + 1 \approx \log_2 p$, so ergibt sich
-exponentielle Komplexität $\mathcal{O}(2^n)$. Dazu ein Rechenbeispiel:
-
-\begin{beispiel}
-  Angenommen man sucht mit dem naiven Algorithmus die Lösung $x$ zur Eingabe
-  $(y, g, p)$, d.\,h. man probiert alle möglichen Lösungen aus $\Z_p^*$ durch,
-  bis man die Lösung gefunden hat (siehe Abschnitt \ref{alg:1}). Zusätzlich steht einem dazu die
-  Rechenleistung von einer Anzahl von 10 Milliarden $(=10^{10})$ Prozessoren zur Verfügung,
-  welche jeweils mit einer Taktfrequenz von $10 \text{\,GHz}$ ($= 10^{10} \cdot s^{-1}$)
-  operieren und jeweils mit jedem Taktzyklus eine modulare Potenz, also
-  die Funktion $f(x, g, p) = g^x \mod p$, berechnen können. Dann hätte man eine
-  Rechenleistung von $10^{20}$ modularen Potenzen pro Sekunde. Mit
-  $10^{20} \leq 2^{67}$ ergibt sich die Zeit $t$ zur Berechnung aller modularen
-  Potenzen von allen möglichen Lösungen aus $\Z_p^*$ zu
-  $t \geq \frac{2^n}{2^{67}\cdot s^{-1}}=2^{n-67} s$. Jetzt kann man leicht die
-  Primzahl $p$ bzw. deren Bitlänge $n$ so groß setzen, dass die Zeit $t$ größer
-  wird als das Alter des Universums:
-  \begin{align*}
-    t_{\text{Alter des Universums}} & = 14 \cdot 10^9 y\\
-    & = 14 \cdot 10^9 \cdot 365 \cdot 24 \cdot 60\cdot 60\cdot s\\
-    & \leq 2^{59}\cdot s\\
-    t_{\text{Alter des Universums}} \leq 2^{59}\cdot s & \leq 2^{n-67}\cdot s \leq t\\
-    59 & \leq n-67\\
-    n & \geq 59+67\\
-    n & \geq 126
-  \end{align*}
-  Für eine Primzahl $p$ mit einer Bitlänge $n \geq 126$ dauert die Berechnung
-  aller möglichen modularen Potenzen mit der oben genannten Hardware also länger
-  als das Universum alt ist. Selbst wenn man annimmt, dass im Mittel die Lösung
-  mit dem naiven Algorithmus nach der Hälfte der Rechenschritte gefunden wird,
-  ist diese Zeitspanne unrealistisch. Außerdem kann, z.\,B. bei Verwendung des
-  Diskreten-Logarithmus-Problems in der Verschlüsselung, jede
-  nicht-exponentielle Verbesserung des Algorithmus durch eine kostengünstige
-  Vergrößerung der Bitlänge $n$ der Primzahl $p$ ausgeglichen werden. Sollte
-  sich z.\,B. die gegebene Rechenleistung um den Faktor $x$ vergrößern, so
-  müsste die Bitlänge $n$ der Primzahl $p$ lediglich um den Betrag
-  $d = \left\lfloor \log_2 x \right\rfloor + 1$ vergrößert werden:
-  $n_{\text{neu}} = n_{\text{alt}} + d$. Würde die Rechenleistung sich also
-  z.\,B. verzehnfachen, wäre also $x=10$, so würde eine konstante Vergrößerung
-  der Bitlänge von $d=4$ dies wieder ausgleichen.
-\end{beispiel}
-
-\subsection{Diffie-Hellman-Merkle Schlüsselaustausch (DHKE)}
-\label{sub:diffie_hellman_key_exchange}
-
-Der auf der Schwierigkeit des Diskreten-Logarithmus-Problems beruhende Diffie-Hellman-Merkle Schlüsselaustausch, englisch: \textbf{D}iffie-\textbf{H}ellman-\textbf{K}ey-\textbf{E}xchange (\textbf{DHKE}), hat den folgenden Ablauf:
-Zwei Kommunikationspartner, hier Alice und Bob, kommunizieren über einen unsicheren Kanal und wollen einen Schlüssel für eine sichere Kommunikation, z.B. durch eine symmetrische Verschlüsselung, austauschen.
-
-Im ersten Schritt wählt Alice eine ausreichend große Primzahl $p$, welche den \todo{bekannte Schwachstellen rausnehmen?}bekannten Fallstricken des Verfahrens ausweicht, z.B. mit $p = c \cdot q+1$, $c \in \N\backslash\{0\}$, $q$ prim, $q$ möglichst groß (etwa $p = 2 \cdot q + 1$). Ausreichend groß bedeutet hierbei, dass die Bitlänge $n$ der Primzahl $p$ so groß ist, dass die Berechnung des diskreten Logarithmus $\text{DL}(y,g,p)$ mit bekannten Algorithmen und aktueller Hardware auf absehbare Zeit nicht möglich sein wird (siehe Abschnitt \ref{sub:komplexitaet_naiver_algorithmus}). Zur Zeit (Jahr 2017) kann für $p$ eine Bitlänge von $n_p = 2048$ und für $q$ eine Bitlänge von $n_q = 256$ als sicher angenommen werden. Weiterhin sucht Alice einen \todo{ist die Formulierung bei Erzeuger korrekt?}Erzeuger $g \in \Z_p^*$, $(2 \leq g \leq p-2)$, welcher $g^k \mod p$, $k \in \N \backslash \{0\}$, zyklisch ohne Untergruppen auf $\Z_p^*$ abbildet (siehe Abschnitt \ref{def:erzeuger}). Dann wählt Alice ihren geheimen privaten Schlüssel $a \in \Z_p^*$, $(1 \leq a \leq p-2)$,  berechnet ihren öffentlichen Schlüssel $A$ mit $A \equiv g^a \mod p$ und sendet ($g$, $p$, $A$) über den unsicheren Kanal an Bob.
-
-Im zweiten Schritt wählt Bob seinen geheimen privaten Schlüssel $b \in \Z_p^*$, $(1 \leq b \leq p-2)$, berechnet seinen öffentlichen Schlüssel $B$ mit $B \equiv g^b \mod p$ und sendet $B$ über den unsicheren Kanal an Alice.
-Der gemeinsame geheime Schlüssel $K$ ergibt sich nun auf der Seite von Alice mit
-\begin{align*}
-	K \equiv B^a \mod p
-\end{align*}
-und auf der Seite von Bob mit
-\begin{align*}
-	K \equiv A^b \mod p \text{.}
-\end{align*}
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=\textwidth]{Diffie-Hellman-Schluesselaustausch2.png}
-  \caption{Diffie-Hellman-Merkle-Schlüsselaustausch}
-  \label{fig:dhke}
-\end{figure}
-
-\subsubsection{Korrektheit: Diffie-Hellman-Merkle Schlüsselaustausch (DHKE)}
-\label{sub:dhke_proof}
-Zur Korrektheit des Diffie-Hellman-Merkle Schlüsselaustausches: Beide Kommunikationspartner haben den gleichen Schlüssel $K = K_1 = K_2$:
-\begin{proof}
-Es gilt \todo{quelle einfügen [Menezes, S.68 2.112(V)]}, wenn \todo{Satz in mathematische grundlagen einfügen? }
-\begin{align*}
-a & \equiv a_1 \mod n
-\end{align*}
-und
-\begin{align*}
-b & \equiv b_1 \mod n \text{,}\\
-n & \in \N \backslash \{0\}
-\end{align*}
-dann folgt daraus
-\begin{align*}
-a \cdot b & \equiv a_1 \cdot b_1 \mod n \text{.}
-\end{align*}
-Nimmt man jetzt an, dass $a=b$ also
-\begin{align*}
-a \cdot a & \equiv a_1 \cdot a_1 \mod n
-\end{align*}
-dann folgt
-\begin{align*}
-a^k & \equiv a_1^k \mod n \text{,}\\
-k & \in \N \backslash \{0\}
-\end{align*}
-und daraus
-\begin{align*}
-(a^k)^u & \equiv (a_1^k)^u \mod n \text{,}\\
-u & \in \N \backslash \{0\}\text{,}
-\end{align*}
-womit sich ergibt, dass
-\begin{align*}
-(a_1^k \mod n)^u & \equiv (a_1^k)^u \mod n
-\end{align*}
-und
-\begin{align*}
-(a_1^k \mod n)^u & \equiv a_1^{k\cdot u} \mod n \text{.}
-\end{align*}
-Mit dieser Kongruenz lässt sich nun einfach zeigen, dass die Schlüssel $K_1$ von Alice und $K_2$ von Bob kongruent sind:
-\begin{align*}
-K_1 & \equiv B^a \mod p\\
-& \equiv (g^b)^a \mod p\\
-& \equiv g^{b \cdot a} \mod p\\
-& \equiv g^{a \cdot b} \mod p\\
-& \equiv (g^a)^b \mod p\\
-& \equiv A^b \mod p\\
-& \equiv K_2
-\end{align*}
-\end{proof}
-
-\subsubsection{Beispiel: Diffie-Hellman-Merkle Schlüsselaustausch (DHKE)}
-\label{sub:dhke_beispiel}
-\begin{beispiel}[Diffie-Hellman-Merkle Schlüsselaustausch]\label{bsp:dhke}
-Die zwei Kommunikationspartner Alice und Bob tauschen einen gemeinsamen geheimen Schlüssel $K$ über einen unsicheren Kanal aus (zu Anschauungszwecken mit kleinen Primzahlen).
-	\begin{center}
-	    \begin{tabularx}{\textwidth}{lXr}
-	    	\textbf{Alice} & \text{ } & \textbf{Bob}\\\midrule
-	    \end{tabularx}
-	    \begin{tabularx}{\textwidth}{lXcXl}
-	    	\textbf{Schritt 1:} & & & & \\
-	    	$\cdot$ wähle Primzahl: $\underline{p = 17}$ & & & & \\
-	    	$\cdot$ finde Erzeuger: $\underline{g = 5}$ & & & & \\
-	    	$\cdot$ wähle geheimen Schlüssel: & & & & \\
-	    	$a \in \{1, \dots, p-2\}$ & & & & \\
-	    	$\underline{a = 10}$ & & & & \\
-	    	$\cdot$ berechne öffentlichen Schlüssel: & & & & \\
-	    	$A \equiv g^a \mod p$ & & & & \\
-	    	$A = 5^{10} \mod 17$ & & & & \\
-	    	$\underline{A = 9}$ & & & & \\
-	    	$\cdot$ sende: $(g = 5, p = 17, A = 9)$ an Bob & & $\to$ & & \\\midrule
-	    	& & & & \textbf{Schritt 2}:\\
-	    	& & & & $\cdot$ wähle geheimen Schlüssel:\\
-	    	& & & & $b \in \{1, \dots, p-2\}$\\
-			& & & & $\underline{b=7}$\\
-	    	& & & & $\cdot$ berechne öffentlichen Schlüssel:\\
-	    	& & & & $B \equiv g^b \mod p$\\
-	    	& & & & $B = 5^7 \mod 17$\\
-	    	& & & & $\underline{B = 10}$\\
-	    	& & $\leftarrow$ & & $\cdot$ sende: $B$ an Alice\\\midrule
-	    \end{tabularx}
-	    \begin{tabularx}{\textwidth}{lXcXl}
-	    	& & \textbf{Schritt 3}: & & \\
-	    	& & $\cdot$ berechne geheimen Schlüssel $K$: & & \\
-	    	$K_1 \equiv B^a \mod p$ & & & & $K_2 \equiv A^b \mod p$\\
-	    	$K_1 = 10^{10} \mod 17$ & & & & $K_2 = 9^7 \mod 17$\\
-	    	$\doubleunderline{K_1 = 2}$ & & & & $\doubleunderline{K_2 = 2}$\\
-	    	& & $\doubleunderline{K_1 = K = K_2}$ & &
-	    \end{tabularx}
-	\end{center}
-Der geheime Schlüssel $K$, den nur Alice und Bob kennen, ist für einen Mithörer der öffentlichen Kommunikation nur schwierig zu Ermitteln, da dieser den diskreten Logarithmus $\text{DL}(A,g,p) = a$ als Lösung der Gleichung $A \equiv g^a \mod p$ bzw. $\text{DL}(B,g,p) = b$ als Lösung der Gleichung $B \equiv g^b \mod p$ berechnen muss, um $K_1 \equiv B^a \mod p$ oder $K_2 \equiv A^b \mod p$, $K = K_1 = K_2$, ermitteln zu können.\\
-\end{beispiel}
-
-\subsection{Verschlüsselung mit DHKE}
-\label{sub:enc_with_dhke}
-Ein Kommunikationspartner (Bob) schickt eine geheime Nachricht $m$ an einen anderen Kommunikationspartner (Alice) über einen unsicheren Kanal.
 
 
 \end{document}
